Overlapping UI Fixes 25SEPT2024

--- a/components/SwiperStyles.css
+++ b/components/SwiperStyles.css
@@ -5,6 +5,7 @@
   body {
     position: relative;
     height: 100%;
+    
   }
   
   body {
@@ -19,6 +20,8 @@
   .swiper {
     width: 100%;
     height: 100%;
+    --swiper-navigation-color:#4caf50;
+    --swiper-pagination-color:#4caf50;
   }
   
   .swiper-slide {
@@ -60,7 +63,6 @@
     margin: 0 10px;
     font-size: 13px;
   }
-
 
 /* 
 .swiper-button-next,
